--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "eslint-config-next": "13.4.4",
     "next": "^14.2.13",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-leaflet": "^4.2.1",
+    "leaflet": "^1.9.4",
+    "dayjs": "^1.11.13",
+    "@mui/x-date-pickers": "^7.23.3"
   }
 }
