--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "react-leaflet": "^4.2.1",
     "leaflet": "^1.9.4",
     "dayjs": "^1.11.13",
-    "@mui/x-date-pickers": "^7.23.3"
+    "@mui/x-date-pickers": "^7.23.3",
+    "react-vega": "^7.5.0",
+    "vega": "^5.30.0",
+    "vega-lite": "^5.21.0"
   }
 }
