--- a/package.json
+++ b/package.json
@@ -15,9 +15,6 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
-    "concurrently": "^9.0.1",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
     "next": "^14.2.13",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -28,5 +25,10 @@
     "react-vega": "^7.5.0",
     "vega": "^5.30.0",
     "vega-lite": "^5.21.0"
+  },
+  "devDependencies": {
+    "concurrently": "^9.0.1",
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.4"
   }
 }
